--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -46,6 +46,9 @@ $spacing-lg: 24px;
 $spacing-xl: 32px;
 $spacing-2xl: 48px;
 
+// Card dimensions
+$card-width: 300px;
+
 // Breakpoints
 $breakpoint-sm: 640px;
 $breakpoint-md: 768px;
