--- a/src/components/dashboard/scss/RaffleCard.module.scss
+++ b/src/components/dashboard/scss/RaffleCard.module.scss
@@ -65,8 +65,8 @@
 
 .title {
   margin: 0;
-  font-size: 1.1rem;
-  font-weight: 600;
+  font-size: 16px;
+  font-weight: 500;
   color: #333;
   line-height: 1.3;
   flex: 1;
@@ -128,16 +128,12 @@
   }
 }
 
-.details {
-  margin-bottom: 16px;
-}
-
 .detail {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   margin-bottom: 8px;
   font-size: 0.85rem;
+  gap: 8px;
   
   &:last-child {
     margin-bottom: 0;
@@ -145,13 +141,12 @@
 }
 
 .label {
-  color: #888;
   font-weight: 500;
 }
 
 .value {
   color: #333;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .priceCurrent {
@@ -160,9 +155,7 @@
   color: #333;
 }
 
-.progress {
-  margin-bottom: 16px;
-}
+
 
 .progressHeader {
   display: flex;
@@ -170,7 +163,6 @@
   align-items: center;
   margin-bottom: 8px;
   font-size: 0.85rem;
-  font-weight: 500;
   color: #555;
 }
 
