better card and better rafflerModal

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -16,6 +16,8 @@ $color-primary-dark: darken($color-primary, 15%);
 $color-gray-light: #f9fafb;
 $color-gray-medium: #e5e7eb;
 $color-gray-dark: #374151;
+$color-border-gray: #dadada;
+$bg-color-gray: #f2f2f2;
 
 // White
 $color-white: #ffffff;
