--- a/src/components/dashboard/scss/RaffleCard.module.scss
+++ b/src/components/dashboard/scss/RaffleCard.module.scss
@@ -132,7 +132,7 @@
   display: flex;
   align-items: center;
   margin-bottom: 8px;
-  font-size: 0.85rem;
+  font-size: 12px;
   gap: 8px;
   
   &:last-child {
