--- a/src/components/header/scss/Header.module.scss
+++ b/src/components/header/scss/Header.module.scss
@@ -4,7 +4,7 @@
   position: relative;
   
   .container {
-    max-width: 1280px;
+    width: 98%;
     margin: 0 auto;
     padding: 0 1rem;
     
@@ -21,7 +21,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 0;
   }
   
   .logo {
